--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 :root {
-    --primary-color: #ed5151;
+    --primary-color: #b72831;
     --secondary-color: #ffffff;
     --hover-color: #ff7f7f;
     --background-color: #ffffff;
-    --text-color: #ed5151;
+    --text-color: #b72831;
 }
 
 .header {
@@ -27,6 +27,15 @@ a {
     color: inherit;
 }
 
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style: none;
+    text-align: center;
+}
+
 .navbar {
     text-align: center;
     margin: 0;
@@ -41,7 +50,7 @@ a {
     text-transform: uppercase;
     font-size: 200%;
     background-color: var(--primary-color);
-    margin: 5%;
+    margin: 2%;
 }
 
 .navbar a:hover {
@@ -60,39 +69,36 @@ html {
     color: var(--text-color);
 }
 
-@media (max-width: 768px) {
-    .header {
-        padding: 10px;
-        margin: 0;
-    }
-
-    .header h1 {
-        font-size: 200%;
-    }
-
-    .header h2 {
-        font-size: 100%;
-    }
-
-    .navbar a {
-        padding: 10px 15px;
-        font-size: 150%;
-        margin: 2%;
-    }
+.content p {
+    font-size: 80%;
 }
 
-@media (max-width: 480px) {
-    .header h1 {
-        font-size: 150%;
-    }
+.skills img {
+    width: auto; 
+    height: 100px;
+}
 
-    .header h2 {
-        font-size: 80%;
-    }
+.skills ul {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 0;
+}
 
-    .navbar a {
-        padding: 8px 10px;
-        font-size: 120%;
-        margin: 1%;
-    }
+.skills li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    transition: transform 0.3s;
+}
+
+.skills h3 {
+    font-size: 150%;
+    color: var(--text-color);
+    text-align: center;
+}
+
+.skills li:hover {
+    transform: scale(1.1);
 }
